# learning-go

./: .gitignore  AGENTS.md  ARCHITECTURE.md  METHODOLOGY.md  README.md  The Go Programming Language Specification - The Go Programming Language.html  pyproject.toml
.claude/: settings.json
.claude/skills/go-teacher/: SKILL.md
eval/: go_spec_retrieval_cases.json
scripts/: __init__.py  benchmark_retrieval.py  eval_go_spec_retrieval.py  index_go_spec.py  quality.py  query_go_spec.py
scripts/go_spec_rag/: __init__.py  config.py  corpus.py  indexing.py  lexical.py  models.py  ollama.py  parse.py  pure.py  render.py  rerank.py  retrieval.py
tests/: test_go_spec_rag.py
